# mariana_llm

./: .gitignore  CMakeLists.txt  README.md
cmake/: abseil.cmake  cuda.cmake  fp16.cmake  glog.cmake  torch.cmake  version.h.in
doc/: swin-attmask.xlsx
include/mariana_llm/: mariana_llm.h  mariana_llm_impl.h
models/grounding_dion/: export_model_configs.py
src/: CMakeLists.txt
src/api/: CMakeLists.txt  mariana_llm.cc  mariana_llm_impl.cc
src/core/: CMakeLists.txt  data_type.cc  data_type.h  device_type.cc  device_type.h  function.cc  function.h  graph.cc  graph.h  init_core_module.cc  init_core_module.h  node.cc  node.h  tensor.cc  tensor.h  tensor_impl.cc  tensor_impl.h  tensor_utils.cc  tensor_utils.h
src/core/backend/: CMakeLists.txt  backend.cc  backend.h
src/core/backend/gpu/: CMakeLists.txt  cuda_alloc.cc  cuda_alloc.h  cuda_allocator.cc  cuda_allocator.h  cuda_common.cc  cuda_common.h  helper_cuda.h
src/core/impl/: CMakeLists.txt  allocator.cc  allocator.h  cpu_alloc.cc  cpu_alloc.h  thread_pool.cc  thread_pool.h
src/models/: CMakeLists.txt  all.h  bert.cc  bert.h  grounding_dino.cc  grounding_dino.h  init_lmodels_module.cc  init_lmodels_module.h  lmodels.cc  lmodels.h  lmodels_type.h  model_param.h  qwen2.cc  qwen2.h
src/ops/: CMakeLists.txt  all.h  att_mask.cc  att_mask.h  conv2d.cc  conv2d.h  gelu.cc  gelu.h  get_rows.cc  get_rows.h  grounding_dino_bi_mhs_attention.cc  grounding_dino_bi_mhs_attention.h  grounding_dino_decoder_before.cc  grounding_dino_decoder_before.h  grounding_dino_decoder_layer.cc  grounding_dino_decoder_layer.h  grounding_dino_encoder_before.cc  grounding_dino_encoder_before.h  grounding_dino_encoder_layer.cc  grounding_dino_encoder_layer.h  grounding_dino_for_detection.cc  grounding_dino_for_detection.h  grounding_dino_multiscale_deformable_attention.cc  grounding_dino_multiscale_deformable_attention.h  grounding_dino_sine_position_embedding.cc  grounding_dino_sine_position_embedding.h  group_norm.cc  group_norm.h  init_ops_module.cc  init_ops_module.h  layer_norm.cc  layer_norm.h  math.cc  math.h  matmul.cc  matmul.h  ops.cc  ops.h  pass.cc  pass.h  (+15 more)
src/ops/backend/: CMakeLists.txt
src/ops/backend/cpu/: CMakeLists.txt  act_route.cc  act_route.h  add.cc  add.h  conv2d.cc  conv2d.h  gelu.cc  gelu.h  get_rows.cc  get_rows.h  grounding_dino_sine_position_embedding.cc  grounding_dino_sine_position_embedding.h  grounding_dino_utils.cc  grounding_dino_utils.h  im2col.cc  im2col.h  matmul.cc  matmul.h  max.cc  max.h  mhs_attention.cc  mhs_attention.h  mul.cc  mul.h  normalization.cc  normalization.h  pad.cc  pad.h  permute.cc  permute.h  roll.cc  roll.h  sigmoid.cc  sigmoid.h  slice.cc  slice.h  softmax.cc  softmax.h  swin_patch_merging.cc  (+1 more)
src/ops/backend/cpu/x86_x64/: CMakeLists.txt
src/ops/backend/cpu/x86_x64/avx/: CMakeLists.txt  avx_common.cc  avx_common.h  avx_funcs.cc  avx_funcs.h
src/ops/backend/gpu/: CMakeLists.txt  att_mask.cu  conv2d.cu  get_rows.cu  grounding_dino_encoder_before.cu  grounding_dino_sine_position_embedding.cu  group_norm.cu  layer_norm.cu  math.cu  matmul.cu  pass.cu  roll.cu  self_attention.cu  slice.cu  swin_layer.cu  swin_patch_merging.cu  swin_stage_output.cu
src/ops/backend/gpu/impl/: act_func.cu  act_func.h  att_mask.cu  att_mask.h  get_rows.cu  get_rows.h  grounding_dino_sine_position_embedding.cu  grounding_dino_sine_position_embedding.h  grounding_dino_utils.cu  grounding_dino_utils.h  im2col.cu  im2col.h  layer_norm.cu  layer_norm.h  math.cu  math.h  matmul.cu  matmul.h  mhs_attention.cu  mhs_attention.h  pad.cu  pad.h  permute.cu  permute.h  roll.cu  roll.h  slice.cu  slice.h
src/ops/backend/gpu/ops/: pass.cu
src/token/: CMakeLists.txt  bert_tokeizer.cc  bert_tokeizer.h  llama_token_fast.cc  llama_token_fast.h  tokenizer.cc  tokenizer.h
src/token/minjia/: chat-template.hpp  minja.hpp
src/utils/: CMakeLists.txt  auto_time.cc  auto_time.h  dtype_utils.h  mariana_define.h  progress_bar.cc  progress_bar.h  sys.cc  sys.h
test/: CMakeLists.txt  app.cpp  compare.py  single_op_run.cpp
