#include(${CMAKE_CURRENT_LIST_DIR}/backend/CMakeLists.txt)

file(GLOB CURRENT_SOURCE_PATH ${CMAKE_CURRENT_LIST_DIR}/*.cc)
file(GLOB CURRENT_HEAD_PATH ${CMAKE_CURRENT_LIST_DIR}/*.h)

set(LIB_NAME mariana_llm_models)
add_library(${LIB_NAME} OBJECT ${CURRENT_SOURCE_PATH})
target_sources(${LIB_NAME} PRIVATE ${CURRENT_SOURCE_PATH} PUBLIC ${CURRENT_HEAD_PATH})
list(APPEND MARIANA_LLM_MODELS_OBJECTS $<TARGET_OBJECTS:${LIB_NAME}>)
