file(GLOB_RECURSE CURRENT_SOURCE_PATH ${CMAKE_CURRENT_LIST_DIR}/*.cu)
file(GLOB_RECURSE CURRENT_HEAD_PATH ${CMAKE_CURRENT_LIST_DIR}/*.h)

set(LIB_NAME mariana_llm_ops_backend_gpu)
add_library(${LIB_NAME} OBJECT ${CURRENT_SOURCE_PATH})
target_sources(${LIB_NAME} PRIVATE ${CURRENT_SOURCE_PATH} PUBLIC ${CURRENT_HEAD_PATH})
list(APPEND MARIANA_LLM_OPS_OBJECTS $<TARGET_OBJECTS:${LIB_NAME}>)
